2008-10-27 07:18  zhang

	* inst/doc/KEGGgraph.Rnw: rbcc in MAPK example implemented

2008-10-26 08:43  zhang

	* NAMESPACE: namespace

2008-10-26 07:00  zhang

	* inst/doc/KEGGgraph.Rnw: subgraph and merge graph demos finished

2008-10-26 06:25  zhang

	* R/graph.R: mergeGraph returns the result explicitly

2008-10-24 17:18  zhang

	* DESCRIPTION: i think it still suggested to have KEGG package

2008-10-24 17:15  zhang

	* R/kegg2graph-functions.R: subtype renamed into getSubtype: small
	  bug in graph method

2008-10-24 17:13  zhang

	* man/KEGGPathwayInfo-class.Rd, man/getDisplayName-methods.Rd:
	  missing items

2008-10-24 17:11  zhang

	* inst/doc/KEGGgraph.Rnw: underscore package not used

2008-10-24 17:08  zhang

	* tests/kegg2graph.R: kegg2graph does not load KEGG anymore

2008-10-24 17:06  zhang

	* DESCRIPTION: not suggesting KEGG any more

2008-10-24 17:03  zhang

	* inst/doc, inst/doc/KEGGgraph.Rnw, inst/extdata/hsa04310.xml: for
	  vignette

2008-10-24 16:57  zhang

	* DESCRIPTION: description updated

2008-10-24 16:57  zhang

	* tests/kegg2graph.R: show methods also tested

2008-10-24 16:54  zhang

	* R/kegg2graph-functions.R: keggpathway show method debuged

2008-10-24 16:53  zhang

	* R/kegg2graph-functions.R: pathway show method debugged

2008-10-24 16:10  zhang

	* man/KEGGEdge-class.Rd, man/KEGGNode-class.Rd,
	  man/KEGGPathway-class.Rd, man/getDisplayName-methods.Rd,
	  man/getEntryID-methods.Rd, man/getKEGGID-methods.Rd,
	  man/getKEGGgeneLink-methods.Rd, man/getName-methods.Rd,
	  man/getPathwayInfo-methods.Rd, man/getReactions-methods.Rd,
	  man/getSubtype-methods.Rd, man/getTitle-methods.Rd,
	  man/getType-methods.Rd, man/getValue-methods.Rd,
	  man/subtypeDisplay-methods.Rd: it seems we have to add alias of
	  method native names to all of the files - am i right

2008-10-24 15:57  zhang

	* man/KEGGEdgeSubtype.Rd, man/expandKEGGNode.Rd,
	  man/expandKEGGPathway.Rd, man/getKEGGgeneLink-methods.Rd,