@@ -1,3 +1,6 @@
+2013-10-08
+KEGGgraph 1.18.0: Changes in KEGGpathway2reactionGraph allows user to merge reaction graphs like pathway graphs
+
 2011-12-14
 KEGGgraph 1.11.1: The colorectalcancerSPIA dataset has been compressed with R CMD build --resave-data
 
